fix: fix jump pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,15 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+.indexMod .im-b3em {
+  color: #0082ff; }
